--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nuts-serve",
   "version": "3.1.1",
   "description": "Server to make GitHub releases (private) available to download with Squirrel support",
-  "main": "./lib/index.js",
+  "main": "./dist/index.js",
   "homepage": "https://github.com/GitbookIO/nuts",
   "license": "Apache-2.0",
   "dependencies": {
@@ -13,7 +13,8 @@
     "express": "^4.13.3",
     "express-useragent": "0.1.9",
     "feed": "^0.3.0",
-    "github-webhook-handler": "0.5.0",
+    "github-webhook-handler": "^0.7.1",
+    "http-status-codes": "^1.3.2",
     "lodash": "3.7.0",
     "lru-diskcache": "1.1.1",
     "octocat": "0.10.2",
@@ -27,8 +28,11 @@
     "uuid": "2.0.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.137",
+    "@types/node": "12.0.8",
     "mocha": "1.18.2",
-    "should": "7.0.4"
+    "should": "7.0.4",
+    "typescript": "3.4.5"
   },
   "bugs": {
     "url": "https://github.com/GitbookIO/nuts/issues"
@@ -44,7 +48,10 @@
     "url": "https://github.com/GitbookIO/nuts.git"
   },
   "scripts": {
-    "start": "node bin/web.js",
-    "test": "mocha --reporter list"
+    "start": "yarn build && node dist/bin/web.js",
+    "test": "mocha --reporter list",
+    "build": "tsc",
+    "watch": "yarn build --watch",
+    "clean-build-dir": "rm -rf ./dist/*"
   }
 }
